crates/config/tests/snapshots/project_config__project_config_writer_updates_php_in_alternate_file-2.snap
---
source: crates/config/tests/project_config.rs
expression: "read_file(&project.join(\"pv.yaml\"))?"
---
php: latest
