crates/config/tests/snapshots/project_config__project_config_writer_updates_php_in_alternate_file.snap
---
source: crates/config/tests/project_config.rs
expression: "(updated.path.file_name(), updated.exists, updated.config)"
---
(
    Some(
        "pv.yaml",
    ),
    true,
    ProjectConfig {
        serve: true,
        env_file: ".env",
        php: Some(
            PhpConfig {
                version: Some(
                    "latest",
                ),
                extensions: [],
            },
        ),
        root: None,
        env: {},
        resources: {},
    },
)
