crates/config/tests/snapshots/project_config__project_config_writer_updates_php_in_discovered_file-2.snap
---
source: crates/config/tests/project_config.rs
expression: "read_file(&project.join(\"pv.yml\"))?"
---
php: '8.4'
root: public
env:
  APP_URL: ${url}
mysql:
  version: '8.0'
  env:
    DB_HOST: ${host}
  allocations:
    app-db:
      env:
        DB_DATABASE: ${database}
postgres:
  version: latest
