crates/config/tests/snapshots/project_config__project_config_writer_updates_php_in_discovered_file.snap
---
source: crates/config/tests/project_config.rs
expression: "(updated.path.file_name(), updated.exists, updated.config, reloaded.config,)"
---
(
    Some(
        "pv.yml",
    ),
    true,
    ProjectConfig {
        serve: true,
        env_file: ".env",
        php: Some(
            PhpConfig {
                version: Some(
                    "8.4",
                ),
                extensions: [],
            },
        ),
        root: Some(
            "public",
        ),
        env: {
            "APP_URL": "${url}",
        },
        resources: {
            "mysql": ResourceConfig {
                track: Some(
                    "8.0",
                ),
                env: {
                    "DB_HOST": "${host}",
                },
                allocations: {
                    "app-db": AllocationConfig {
                        env: {
                            "DB_DATABASE": "${database}",
                        },
                    },
                },
            },
            "postgres": ResourceConfig {
                track: Some(
                    "latest",
                ),
                env: {},
                allocations: {},
            },
        },
    },
    ProjectConfig {
        serve: true,
        env_file: ".env",
        php: Some(
            PhpConfig {
                version: Some(
                    "8.4",
                ),
                extensions: [],
            },
        ),
        root: Some(
            "public",
        ),
        env: {
            "APP_URL": "${url}",
        },
        resources: {
            "mysql": ResourceConfig {
                track: Some(
                    "8.0",
                ),
                env: {
                    "DB_HOST": "${host}",
                },
                allocations: {
                    "app-db": AllocationConfig {
                        env: {
                            "DB_DATABASE": "${database}",
                        },
                    },
                },
            },
            "postgres": ResourceConfig {
                track: Some(
                    "latest",
                ),
                env: {},
                allocations: {},
            },
        },
    },
)
