crates/config/tests/snapshots/project_config__project_config_writer_updates_symlinked_config_target-2.snap
---
source: crates/config/tests/project_config.rs
expression: read_file(&target)?
---
php: '8.4'
redis: {}
