crates/config/tests/snapshots/project_config__project_config_writer_updates_symlinked_config_target.snap
---
source: crates/config/tests/project_config.rs
expression: "(updated.path.file_name(), updated.exists, updated.config)"
---
(
    Some(
        "pv.yml",
    ),
    true,
    ProjectConfig {
        serve: true,
        env_file: ".env",
        php: Some(
            PhpConfig {
                version: Some(
                    "8.4",
                ),
                extensions: [],
            },
        ),
        root: None,
        env: {},
        resources: {
            "redis": ResourceConfig {
                track: None,
                env: {},
                allocations: {},
            },
        },
    },
)
