crates/config/tests/snapshots/project_config__project_config_writer_writes_full_config_to_preferred_file-2.snap
---
source: crates/config/tests/project_config.rs
expression: "read_file(&project.join(\"pv.yml\"))?"
---
php: '8.4'
root: public
env:
  APP_URL: ${url}
mysql:
  version: latest
  allocations:
    app:
      env:
        DB_HOST: ${host}
