crates/config/tests/snapshots/project_config__project_config_writer_writes_full_config_to_preferred_file.snap
---
source: crates/config/tests/project_config.rs
expression: "(written.path.file_name(), written.exists, reloaded.config)"
---
(
    Some(
        "pv.yml",
    ),
    true,
    ProjectConfig {
        serve: true,
        env_file: ".env",
        php: Some(
            PhpConfig {
                version: Some(
                    "8.4",
                ),
                extensions: [],
            },
        ),
        root: Some(
            "public",
        ),
        env: {
            "APP_URL": "${url}",
        },
        resources: {
            "mysql": ResourceConfig {
                track: Some(
                    "latest",
                ),
                env: {},
                allocations: {
                    "app": AllocationConfig {
                        env: {
                            "DB_HOST": "${host}",
                        },
                    },
                },
            },
        },
    },
)
